further refactor on demos

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
@@ -29,10 +29,9 @@ Via Twig
 
 Via Web Component and Twig
 
-<h3>Collapse and Center</h3>
-<bolt-dropdown
-  title="Custom Element w/ Collapse & Center"
->
+&lt;bolt-dropdown
+  title="Custom Element w/ Collapse &amp; Center"
+&gt;
   {% include "@bolt-components-nav/nav.twig" with {
     "links": [
       {
@@ -49,7 +48,7 @@ Via Web Component and Twig
       }
     ]
   } only %}
-</bolt-dropdown>
+&lt;/bolt-dropdown&gt;
 {% endverbatim %}
 {% endset %}
 
