partial fix for CSS Var-based theming disappearing on built site due to issue related to: https://github.com/jgthms/bulma/issues/1283#issue-264285920

--- a/packages/global/styles/06-themes/themes-general/_themes-xdark.scss
+++ b/packages/global/styles/06-themes/themes-general/_themes-xdark.scss
@@ -53,46 +53,45 @@ $bolt-theme-contrast-filter:    grayscale(100%) invert(100%) brightness(150%);
   $bolt-theme-primary-border-focus:     $bolt-theme-primary-background-focus;
 
 
-
-  --bolt-theme-background:   $bolt-theme-background;
-  --bolt-theme-primary:      $bolt-theme-primary;
-  --bolt-theme-secondary:    $bolt-theme-secondary;
-  --bolt-theme-heading:      $bolt-theme-heading;
-  --bolt-theme-link:         $bolt-theme-link;
-  --bolt-theme-text:         $bolt-theme-text;
-  --bolt-theme-heading-link: $bolt-theme-heading-link;
-  --bolt-theme-border:       $bolt-theme-border;
-
-
-  --bolt-theme-link-default: $bolt-theme-link-default;
-  --bolt-theme-link-hover: $bolt-theme-link-hover;
-  --bolt-theme-link-active: $bolt-theme-link-active;
-  --bolt-theme-link-visited: $bolt-theme-link-visited;
+  --bolt-theme-background:   #{$bolt-theme-background};
+  --bolt-theme-primary:      #{$bolt-theme-primary};
+  --bolt-theme-secondary:    #{$bolt-theme-secondary};
+  --bolt-theme-heading:      #{$bolt-theme-heading};
+  --bolt-theme-link:         #{$bolt-theme-link};
+  --bolt-theme-text:         #{$bolt-theme-text};
+  --bolt-theme-heading-link: #{$bolt-theme-heading-link};
+  --bolt-theme-border:       #{$bolt-theme-border};
 
 
-  --bolt-theme-heading-link-default: $bolt-theme-heading-link-default;
-  --bolt-theme-heading-link-hover: $bolt-theme-heading-link-hover;
-  --bolt-theme-heading-link-active: $bolt-theme-heading-link-active;
-  --bolt-theme-heading-link-visited: $bolt-theme-heading-link-visited;
+  --bolt-theme-link-default: #{$bolt-theme-link-default};
+  --bolt-theme-link-hover: #{$bolt-theme-link-hover};
+  --bolt-theme-link-active: #{$bolt-theme-link-active};
+  --bolt-theme-link-visited: #{$bolt-theme-link-visited};
 
 
-  --bolt-theme-primary-background-default: $bolt-theme-primary-background-default;
-  --bolt-theme-primary-text-default:       $bolt-theme-primary-text-default;
-  --bolt-theme-primary-border-default:     $bolt-theme-primary-border-default;
+  --bolt-theme-heading-link-default: #{$bolt-theme-heading-link-default};
+  --bolt-theme-heading-link-hover: #{$bolt-theme-heading-link-hover};
+  --bolt-theme-heading-link-active: #{$bolt-theme-heading-link-active};
+  --bolt-theme-heading-link-visited: #{$bolt-theme-heading-link-visited};
 
-  --bolt-theme-primary-background-hover: $bolt-theme-primary-background-hover;
-  --bolt-theme-primary-text-hover:       $bolt-theme-primary-text-hover;
-  --bolt-theme-primary-border-hover:     $bolt-theme-primary-border-hover;
+  
+  --bolt-theme-primary-background-default: #{$bolt-theme-primary-background-default};
+  --bolt-theme-primary-text-default:       #{$bolt-theme-primary-text-default};
+  --bolt-theme-primary-border-default:     #{$bolt-theme-primary-border-default};
 
-  --bolt-theme-primary-background-active: $bolt-theme-primary-background-active;
-  --bolt-theme-primary-text-active:       $bolt-theme-primary-text-active;
-  --bolt-theme-primary-border-active:     $bolt-theme-primary-border-active;
+  --bolt-theme-primary-background-hover: #{$bolt-theme-primary-background-hover};
+  --bolt-theme-primary-text-hover:       #{$bolt-theme-primary-text-hover};
+  --bolt-theme-primary-border-hover:     #{$bolt-theme-primary-border-hover};
 
-  --bolt-theme-primary-background-focus: $bolt-theme-primary-background-focus;
-  --bolt-theme-primary-text-focus:       $bolt-theme-primary-text-focus;
-  --bolt-theme-primary-border-focus:     $bolt-theme-primary-border-focus;
+  --bolt-theme-primary-background-active: #{$bolt-theme-primary-background-active};
+  --bolt-theme-primary-text-active:       #{$bolt-theme-primary-text-active};
+  --bolt-theme-primary-border-active:     #{$bolt-theme-primary-border-active};
 
-  --bolt-theme-contrast-filter: $bolt-theme-contrast-filter;
+  --bolt-theme-primary-background-focus: #{$bolt-theme-primary-background-focus};
+  --bolt-theme-primary-text-focus:       #{$bolt-theme-primary-text-focus};
+  --bolt-theme-primary-border-focus:     #{$bolt-theme-primary-border-focus};
+
+  --bolt-theme-contrast-filter: #{$bolt-theme-contrast-filter};
 
   background-color: $bolt-theme-background;
   color: $bolt-theme-text;
