--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -13,8 +13,10 @@
   font-size: 0; // Workaround to IE 11 adding extra whitespace
   overflow: hidden; // Hide placeholder blurred images from leaking through
 
-  --aspect-ratio-width: 1;
-  --aspect-ratio-height: 1;
+  @include bolt-css-vars((
+    --aspect-ratio-width: 1,
+    --aspect-ratio-height: 1,
+  ));
 
   @supports (--custom:property) {
     padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
