fix: adding @bolt/core dependency to ratio object to fix Webpack build error

--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -2,6 +2,8 @@
    #BOLT RATIO OBJECT
    ========================================================================== */
 
+@import '@bolt/core';
+
 .o-#{$bolt-namespace}-ratio,
 #{$bolt-namespace}-ratio {
   display: inline-block;
