update dropdown docs

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/20-dropdown-theme-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/20-dropdown-theme-variations.twig
@@ -9,7 +9,7 @@
 {% for theme in exampleThemes %}
   <div class="t-bolt-{{ theme }} u-bolt-padding-small u-bolt-height-xxlarge">
     {% embed "@bolt-components-dropdown/dropdown.twig" with {
-      title: "Toggle Menu",
+      title: "Dropdown Menu, Theme: " ~ theme,
       center: true
     } %}
       {% block content %}
