--- a/packages/components/bolt-nav/nav.scss
+++ b/packages/components/bolt-nav/nav.scss
@@ -22,7 +22,7 @@ bolt-nav {
   flex-direction: column;
   position: relative;
   list-style: none;
-  overflow: hidden;
+  overflow: scroll;
 
   @include respond-to(small) {
     flex-direction: row;
