--- a/packages/global/styles/04-elements/_elements-headings.scss
+++ b/packages/global/styles/04-elements/_elements-headings.scss
@@ -3,8 +3,13 @@
 \* ------------------------------------ */
 /* stylelint-disable selector-list-comma-newline-after */
 #{$bolt-all-heading-elements} {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-family(heading);
-  @include bolt-font-size(large, tight);
+  @include bolt-font-size(large);
   @include bolt-font-weight(bold);
+
+  &:last-child {
+    @include bolt-margin-bottom(0);
+  }
 }
 /* stylelint-enable selector-list-comma-newline-after */
