--- a/apps/pattern-lab/src/_patterns/02-components/code-snippet/code-snippet-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/code-snippet/code-snippet-docs.twig
@@ -1,7 +1,9 @@
 {% set schema = get_data('@bolt-components-code-snippet/code-snippet.schema.yml') %}
 {% set code %}
 {% verbatim %}{% include "@bolt-components-code-snippet/code-snippet.twig" with {
-  "content": "display: block;"
+  "display": "block",
+  "lang": "css",
+  "content": "Some code snippet"
 } only %}{% endverbatim %}
 {% endset %}
 
