--- a/packages/components/bolt-code-snippet/src/code-snippet.scss
+++ b/packages/components/bolt-code-snippet/src/code-snippet.scss
@@ -1,12 +1,13 @@
 @import '@bolt/core';
 
 /* ------------------------------------ *\
-   Bolt Code Snippet
+    Bolt Code Snippet
 \* ------------------------------------ */
 
 $bolt-code-snippet-border-radius: $bolt-border-radius;
-$bolt-code-snippet-text-color: var(--bolt-theme-text, inherit);
-$bolt-code-snippet-background-color: rgba(bolt-color(gray), 0.1);
+$bolt-code-snippet-text-color: var(--bolt-theme-heading, inherit);
+$bolt-code-snippet-background-color: rgba(bolt-color(indigo, light), 0.08);
+
 
 // Custom element default styles
 bolt-code-snippet {
@@ -27,7 +28,7 @@ bolt-code-snippet {
 }
 
 .c-bolt-code-snippet {
-  @include bolt-padding(small, stretched);
+  @include bolt-padding(small, squished);
   @include bolt-horizontal-scroll;
 
   color: inherit;
@@ -62,10 +63,10 @@ bolt-code-snippet {
 }
 
 .c-bolt-code-snippet__code--inline {
-  @include bolt-padding(xxsmall 0.25rem xxsmall 0.3rem); // [Mai] 0.25rem on the right offsets the 0.05rem letter-spacing.
+  @include bolt-padding(2px 0.25rem 2px 0.3rem); // [Mai] 0.25rem on the right offsets the 0.05rem letter-spacing.
 
   display: inline;
-  color: var(--bolt-theme-text, inherit);
-  border-radius: $bolt-border-radius;
-  background-color: rgba(bolt-color(gray), 0.1);
+  color: $bolt-code-snippet-text-color;
+  border-radius: $bolt-code-snippet-border-radius;
+  background-color: $bolt-code-snippet-background-color;
 }
