refactor: remove display none on navbar content on smaller screens; clean up navbar + dropdown integration

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown--collapse.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown--collapse.twig
@@ -1,5 +1,6 @@
 {% embed "@bolt-components-dropdown/dropdown.twig" with {
   title: "Toggle Menu",
+  center: true,
   collapse: true
 } %}
   {% block content %}
