--- a/apps/pattern-lab/src/styles/_docs.scss
+++ b/apps/pattern-lab/src/styles/_docs.scss
@@ -165,20 +165,15 @@ pre {
 
 .c-bolt-docs__title {
   @include bolt-font-size(xxlarge);
-  @include bolt-font-weight(semibold); // font-size: 24px;
+  @include bolt-font-weight(semibold);
   @include bolt-margin-bottom(medium);
   color: bolt-color(black);
 }
 
 .c-bolt-docs__lead {
   @include bolt-font-weight(regular);
-  // font-size: 24px;
-  // line-height: 1.5;
-  // font-weight: 300;
   border: 1px dotted transparent;
   border-radius: 4px;
-  // margin: -13px;
-  // padding: 13px;
   color: bolt-color(black);
   transition: border 0.3s ease-in-out;
 
