Bolt Site Mobile Menu Fix & Schema Table Android Scroll Fix (#589)
* Bolt Site - removed unnecessary mobile menu item

* Schema Table - removed problematic touch-action css rule which prevented schema table from being scrollable on Android

* Revert "Bolt Site - removed unnecessary mobile menu item"

This reverts commit 21266967614dc7e18b35cc3ea232baf379c9728c.

* Only show mobile menu trigger on docs pages

* Styling adjustments to bolt site navigation to allow for more space at smaller screen sizes

* Added close menu toggle to fly out sub-nav

* Minor adjustment to header nav to center on smaller screens

--- a/apps/bolt-site/templates/site.twig
+++ b/apps/bolt-site/templates/site.twig
@@ -70,14 +70,16 @@
         <a href="/pattern-lab/index.html" target="_blank">Pattern Lab</a>
       {% endif %}
     {% endfor %}
-
-    <a href="#menu" class="storefront-docs__hamburger u-bolt-hide@medium">
-      <span class="u-bolt-margin-right-xsmall">Menu</span>
-      {% include "@bolt-components-icon/icon.twig" with {
-        name: "menu",
-        size: "medium",
-      } %}
-    </a>
+    
+    {% if 'docs/' in currentUrl %}
+      <a href="#menu" class="storefront-docs__hamburger u-bolt-hide@medium">
+        <span class="u-bolt-margin-right-xsmall">Menu</span>
+        {% include "@bolt-components-icon/icon.twig" with {
+          name: "menu",
+          size: "medium",
+        } %}
+      </a>
+    {% endif %}
   </nav>
   {% if currentUrl != 'index.html' %}
     {% include "@bolt-components-headline/headline.twig" with {
