WIP Dropdown Refactor (#602)
* add theme variations example of dropdown

* refactor PL examples of dropdown

* remove broken example from dropdown docs

* update rendering strategies for demos

* further refactor on demos

* update dropdown docs

* add scroll to dropdown

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
@@ -1,8 +1,38 @@
 {% set schema = get_data('@bolt-components-dropdown/dropdown.schema.yml') %}
 {% set code %}{% verbatim %}
-{% include "@bolt-components-dropdown/dropdown.twig" with {
-  title: "Example Title",
-  content: include("@bolt-components-nav/nav.twig", {
+Via Twig
+
+{% embed "@bolt-components-dropdown/dropdown.twig" with {
+  title: "Toggle Menu",
+  collapse: true
+} %}
+  {% block content %}
+    {% include "@bolt-components-nav/nav.twig" with {
+      "links": [
+        {
+        "text": "Link 1 Text",
+        "url": "#link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "#link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "#link-3-url"
+      }
+      ]
+    } %}
+  {% endblock %}
+{% endembed %}
+
+
+Via Web Component and Twig
+
+&lt;bolt-dropdown
+  title="Custom Element w/ Collapse &amp; Center"
+&gt;
+  {% include "@bolt-components-nav/nav.twig" with {
     "links": [
       {
         "text": "Link 1 Text",
@@ -15,18 +45,10 @@
       {
         "text": "Link 3 Text",
         "url": "#link-3-url"
-      },
-       {
-        "text": "Link 4 Text",
-        "url": "#link-4-url"
-      },
-      {
-        "text": "Link 5 Text",
-        "url": "#link-5-url"
       }
     ]
-  })
-} %}
+  } only %}
+&lt;/bolt-dropdown&gt;
 {% endverbatim %}
 {% endset %}
 
