--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
@@ -1,5 +1,6 @@
 {% embed "@bolt-components-dropdown/dropdown.twig" with {
-  title: "Toggle Menu"
+  title: "Really Extremely Long Example Header Text Example",
+  center: true
 } %}
   {% block content %}
     {% include "@bolt-components-nav/nav.twig" with {
@@ -35,41 +36,8 @@
         {
           "text": "Link 8 Text",
           "url": "#link-8-url"
-        },
-        {
-          "text": "Link 9 Text",
-          "url": "#link-9-url"
-        },
-        {
-          "text": "Link 10 Text",
-          "url": "#link-10-url"
-        },
-        {
-          "text": "Link 11 Text",
-          "url": "#link-12-url"
-        },
-        {
-          "text": "Link 13 Text",
-          "url": "#link-13-url"
-        },
-        {
-          "text": "Link 14 Text",
-          "url": "#link-14-url"
-        },
-        {
-          "text": "Link 15 Text",
-          "url": "#link-15-url"
-        },
-        {
-          "text": "Link 16 Text",
-          "url": "#link-16-url"
-        },
-        {
-          "text": "Link 17 Text",
-          "url": "#link-17-url"
         }
       ]
     } %}
   {% endblock %}
 {% endembed %}
-
